[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=1]
[ext_resource path="res://Art/Characters/Sword-Goblin-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Art/Characters/helmet-Sheet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[node name="Goblin" type="KinematicBody2D" groups=[
"Character",
"Goblin",
]]
collision_mask = 81
script = ExtResource( 1 )
max_hp = 0.5
attack_damage = 1.0

[node name="ReloadPathTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Armor" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 0 )
texture = ExtResource( 3 )
hframes = 12
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[connection signal="timeout" from="ReloadPathTimer" to="." method="_on_ReloadPathTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
